modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_Toolbar.scss
html#{$cadmin-selector} {
	.cadmin {
		.page-editor__toolbar {
			background-color: $cadmin-white;
			border-bottom: 1px solid fade_out($cadmin-secondary-l2, 0.5);
			color: $cadmin-secondary;
			display: flex;
			margin-bottom: 0;
			width: 100%;

			&--master-layout {
				background-color: $cadmin-primary-l3;
				border-bottom: 1px solid $cadmin-primary-l1;
			}

			.btn-secondary:active,
			.btn-secondary[aria-pressed='true'],
			.btn-secondary[aria-pressed='true']:hover {
				background-color: $cadmin-gray-200;
				border-color: $cadmin-gray-400;
			}

			& > .container-fluid {
				flex-direction: row;
				justify-content: flex-start;
				padding: 0;
				white-space: nowrap;

				> .navbar-nav {
					display: flex;
					flex-wrap: nowrap;
					max-width: 100%;
					padding: 12px;

					&.start {
						align-self: flex-start;
						padding-right: 0;

						> .nav-item {
							margin-right: $pageEditorSpacing;
						}
					}

					&.middle {
						justify-content: flex-start;
						padding: 0;

						> .nav-item {
							margin-right: $pageEditorSpacing;
						}
					}

					&.end {
						box-shadow: inset 0 1px 0 0
							fade-out($cadmin-secondary-l2, 0.5);
						flex-basis: 100%;
						justify-content: flex-end;

						> .nav-item {
							margin-left: $pageEditorSpacing;
						}
					}

					> .nav-item > .navbar-nav > .nav-item + .nav-item {
						margin-left: $pageEditorSpacing;
					}
				}

				@include media-breakpoint-up(sm, $cadmin-grid-breakpoints) {
					> .navbar-nav {
						&.start > .nav-item {
							margin-right: $pageEditorSpacing * 2;
						}

						&.middle > .nav-item {
							margin-right: 0;
						}

						&.end > .nav-item {
							margin-left: $pageEditorSpacing * 2;
						}
					}
				}
			}
		}
	}
}

html#{$cadmin-selector}
	body.open
	.cadmin
	.page-editor__toolbar
	> .container-fluid {
	@media (min-width: 1400px) {
		> .navbar-nav {
			padding: 16px 12px;

			&.middle {
				flex: 1;
				justify-content: center;
				padding-left: $pageEditorSpacing * 1.5;
			}

			&.end {
				box-shadow: none;
				flex-basis: auto;
			}
		}
	}
}

html#{$cadmin-selector}
	body:not(.open)
	.cadmin
	.page-editor__toolbar
	> .container-fluid {
	@include media-breakpoint-up(xl, $cadmin-grid-breakpoints) {
		> .navbar-nav {
			padding: 16px 12px;

			&.middle {
				flex: 1;
				justify-content: center;
				padding-left: $pageEditorSpacing * 1.5;
			}

			&.end {
				box-shadow: none;
				flex-basis: auto;
			}
		}
	}
}

